# wool24

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
tests/: test_crawler.py
wool24/: crawler.py  main.py  models.py  website_scraper.py
wool24/scrapers/: __init__.py  wollplatz.py
